Start Kafka and Hbase first, and fill them with data later